Add docker files and refactor old code

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" href="/movies-list-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie List</title>
+    <script>
+      window.VITE_API_URL = "VITE_API_URL_PLACEHOLDER";
+      window.VITE_EMAIL = "VITE_EMAIL_PLACEHOLDER";
+      window.VITE_PASSWORD = "VITE_PASSWORD_PLACEHOLDER";
+      window.VITE_NAME = "VITE_NAME_PLACEHOLDER";
+    </script>
   </head>
   <body>
     <div id="root"></div>
